@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-09T16:10:36Z",
-  "count_outdated" : 7483,
-  "uniques_outdated" : 3192,
-  "count" : 7680,
+  "timestamp" : "2024-05-10T00:39:45Z",
+  "count_outdated" : 7546,
+  "uniques_outdated" : 3242,
+  "count" : 7681,
   "uniques" : 3336,
   "clones" : [
-    {
-      "timestamp": "2024-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 63 ],
-      "count_decinc": [ 62, 63 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 50 ],
-      "uniques_decinc": [ 49, 50 ]
-    },
     {
       "timestamp": "2024-04-26T00:00:00Z",
       "count": 44,
@@ -79,9 +70,9 @@
     },
     {
       "timestamp": "2024-05-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
