@@ -3,11 +3,6 @@
   "uniques": 82,
   "clones": [
     {
-      "timestamp": "2024-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-04-26T00:00:00Z",
       "count": 44,
       "uniques": 33
@@ -44,7 +39,7 @@
     },
     {
       "timestamp": "2024-05-09T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
